# telemetry-integration-examples

./: .gitignore  README.md  api.py  example-prompt.promptl  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
backend/: api.py  pyproject.toml  sdk_gateway.py  sdk_telemetry.py
backend/php/: composer.json
backend/php/public/: index.php
backend/php/src/: LatitudeClient.php  LogHandler.php  PromptParser.php  TelemetryHandler.php  TelemetrySetup.php
backend/python/: pyproject.toml  sdk_telemetry.py
backend/ruby/: Gemfile  app.rb
backend/typescript/: package.json
backend/typescript/src/: index.ts  sdk-gateway.ts  sdk-telemetry.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: alert.tsx
